NN/Type_identifier/typeidentifier.output
Grammar

    0 $accept: example $end

    1 example: compound '\n'

    2 compound: Ppada '-' Upada

    3 Ppada: '<' pada

    4 Upada: niRTa '>'
    5      | nirUpiwa '>'
    6      | pada '>'

    7 pada: compound
    8     | concept


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'-' (45) 2
'<' (60) 3
'>' (62) 4 5 6
error (256)
niRTa (258) 4
nirUpiwa (259) 5
concept (260) 8


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
example (11)
    on left: 1, on right: 0
compound (12)
    on left: 2, on right: 1 7
Ppada (13)
    on left: 3, on right: 2
Upada (14)
    on left: 4 5 6, on right: 2
pada (15)
    on left: 7 8, on right: 3 6


State 0

    0 $accept: . example $end

    '<'  shift, and go to state 1

    example   go to state 2
    compound  go to state 3
    Ppada     go to state 4


State 1

    3 Ppada: '<' . pada

    concept  shift, and go to state 5
    '<'      shift, and go to state 1

    compound  go to state 6
    Ppada     go to state 4
    pada      go to state 7


State 2

    0 $accept: example . $end

    $end  shift, and go to state 8


State 3

    1 example: compound . '\n'

    '\n'  shift, and go to state 9


State 4

    2 compound: Ppada . '-' Upada

    '-'  shift, and go to state 10


State 5

    8 pada: concept .

    $default  reduce using rule 8 (pada)


State 6

    7 pada: compound .

    $default  reduce using rule 7 (pada)


State 7

    3 Ppada: '<' pada .

    $default  reduce using rule 3 (Ppada)


State 8

    0 $accept: example $end .

    $default  accept


State 9

    1 example: compound '\n' .

    $default  reduce using rule 1 (example)


State 10

    2 compound: Ppada '-' . Upada

    niRTa     shift, and go to state 11
    nirUpiwa  shift, and go to state 12
    concept   shift, and go to state 5
    '<'       shift, and go to state 1

    compound  go to state 6
    Ppada     go to state 4
    Upada     go to state 13
    pada      go to state 14


State 11

    4 Upada: niRTa . '>'

    '>'  shift, and go to state 15


State 12

    5 Upada: nirUpiwa . '>'

    '>'  shift, and go to state 16


State 13

    2 compound: Ppada '-' Upada .

    $default  reduce using rule 2 (compound)


State 14

    6 Upada: pada . '>'

    '>'  shift, and go to state 17


State 15

    4 Upada: niRTa '>' .

    $default  reduce using rule 4 (Upada)


State 16

    5 Upada: nirUpiwa '>' .

    $default  reduce using rule 5 (Upada)


State 17

    6 Upada: pada '>' .

    $default  reduce using rule 6 (Upada)
